# SuperDebug

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
.history/: README_20220318110702.md  README_20220318134750.md  debug_20220318110702.py  pyproject_20220318115048.toml
.history/superdebug/: __init___20220318110735.py  __init___20220318115001.py
superdebug/: __init__.py
