[tool.poetry]
name = "superdebug"
version = "0.4.0"
description = "Convenient debugging for machine learning projects"
authors = ["Azure-Vision <hewanrong2001@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
mypyc-ipython = "^0.0.2"
numpy = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
